--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-native-community/async-storage": "^1.9.0",
     "@react-native-community/masked-view": "^0.1.10",
+    "formik": "^2.1.4",
     "react": "16.11.0",
     "react-native": "0.62.2",
     "react-native-animatable": "^1.3.3",
@@ -23,7 +24,8 @@
     "react-native-snackbar": "^2.2.0",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.3.8",
-    "react-navigation-stack": "^2.3.13"
+    "react-navigation-stack": "^2.3.13",
+    "yup": "^0.28.5"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
