--- a/package.json
+++ b/package.json
@@ -11,17 +11,22 @@
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.9.0",
+    "@react-native-community/geolocation": "^2.0.2",
     "@react-native-community/masked-view": "^0.1.10",
     "formik": "^2.1.4",
     "react": "16.11.0",
     "react-native": "0.62.2",
     "react-native-animatable": "^1.3.3",
     "react-native-elements": "^2.0.0",
+    "react-native-fbsdk": "^1.1.2",
     "react-native-gesture-handler": "^1.6.1",
+    "react-native-maps": "^0.26.1",
+    "react-native-rename": "^2.4.1",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-safe-area-view": "^1.1.1",
     "react-native-screens": "^2.7.0",
     "react-native-snackbar": "^2.2.0",
+    "react-native-swiper": "^1.6.0-nightly.5",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.3.8",
     "react-navigation-stack": "^2.3.13",
